@@ -5,7 +5,7 @@
 #include "kmaddrbook.h"
 #include <assert.h>
 #include <kapp.h>
-#include <kapp.h>
+#include <kmsgbox.h>
 
 //-----------------------------------------------------------------------------
 KMAddrBookSelDlg::KMAddrBookSelDlg(KMAddrBook* aAddrBook, const char* aCap):
@@ -173,8 +173,11 @@ void KMAddrBookEditDlg::slotOk()
     addr = mListBox.text(idx);
     mAddrBook->insert(addr);
   }
-  mAddrBook->store();
-
+  if(mAddrBook->store() == IO_FatalError)
+    {
+      KMsgBox::message(0,i18n("KMail error"),
+		       i18n("Storing addressbook failed"));
+    }
   accept();
 }
 
